2008-09-03  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkbltadd.c: chosing first variant by
	default (#550722)

2008-07-27  Matthias Clasen  <mclasen@redhat.com>

	* gnome-keyboard-properties.c: Revert this for now, since
	gnome-icon-theme doesn't actually ship the standard icon yet.

2008-07-27  Matthias Clasen  <mclasen@redhat.com>

	* gnome-keyboard-properties.c: Use standard icon name for the
	"Audio Feedback" button. (#544922)

2008-06-21  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Matthias Clasen <mclasen@redhat.com>

	* gnome-keyboard-properties.c: (main):
	* keyboard.desktop.in.in: use standard icon name from the icon naming
	spec (bug #539340)

==================== 2.23.2 ====================

2008-04-28  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-iso.c: removed unneeded file
	* gnome-keyboard-properties.glade,
	gnome-keyboard-properties-xkbltadd.c: some polish in layout and code.
	No more "statistical" highlighting for languages, second tab is
	disabled if there are no languages

2008-04-27  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.h, gnome-keyboard-properties-iso.c,
	gnome-keyboard-xkbpv.c, gnome-keyboard-properties.glade,
	gnome-keyboard-properties-xkbltadd.c, Makefile.am: Added sorting by
	language and country

2008-04-24  Thomas Wood  <thos@gnome.org>

	* gnome-keyboard-properties-xkbot.c: (xkb_options_load_options),
	(xkb_options_popup_dialog):
	* gnome-keyboard-properties.glade:

	Don't close the Keyboard Layout Options window when the Help button is
	clicked. (bug #529772).

2008-04-14  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.c: getting rid of unneeded backup
	function

2008-03-27  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties-a11y.c: (setup_a11y_tabs):
	* gnome-keyboard-properties.c: (create_dialog), (setup_dialog):
	* gnome-keyboard-properties.glade: fix various string and layout
	issues (bug #521826)
