@@ -1,3 +1,9 @@
+2008-09-05  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkb.c, gnome-keyboard-properties-xkblt.c:
+	using the fact that latest libxklavier returns descriptions in UTF-8,
+	no need to convert in 8-bit locales
+
 2008-09-03  Sergey Udaltsov <svu@gnome.org>
 
 	* gnome-keyboard-properties-xkbltadd.c: chosing first variant by
